# BlogDjango

./: db.sqlite3
blog/: models.py  pyproject.toml  views.py
blog/Templates/: pagination.html
blog/Templates/blog/: base.html
blog/Templates/blog/post/: detail.html  list.html
blog/migrations/: 0001_initial.py  0002_rename_create_post_created.py
mysite/: settings.py
