[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["HR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
black = "^24.1.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
safety = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
